@@ -1856,6 +1856,9 @@ _DATA                           C      10C        12        12
       size 0 for segment _BSS (.DATA?) if an EVEN directive is positioned at the very start of this segment.
       This causes the linker to add the segment to the binary, bloating it with trailing 0x00 bytes.
 </TD><TD>-</TD></TR>
+<TR BGCOLOR="#E0E0E0"><TD>23</TD><TD>Masm's MOD operator will return wrong results if one of the operands
+      is negative.
+</TD><TD>-</TD></TR>
 </TABLE>
 
     It's slightly dangerous to fix old Masm bugs, since some code might
